--- a/css/styles.css
+++ b/css/styles.css
@@ -50,10 +50,6 @@ img {
   padding-top: 120px;
   padding-bottom: 120px;
 }
-.pad-marg-nav {
-  padding: 0;
-  margin: 0;
-}
 .page-header {
   border-bottom: 1px solid #e7e9fc;
 }
@@ -132,7 +128,6 @@ img {
 .main-title {
   display: block;
   padding-top: 0;
-  margin-bottom: 48px;
   font-style: normal;
   font-weight: 700;
   font-size: 56px;
@@ -179,28 +174,35 @@ img {
 }
 .features-list {
   display: flex;
-  justify-content: space-between;
 }
 .features-item {
   flex-basis: calc((100% - 72px) / 4);
+}
+.features-item:not(:last-child) {
+  margin-right: 24px;
 }
 .section-features-container {
   padding-bottom: 0;
 }
 .services-list {
   display: flex;
-  justify-content: space-between;
 }
 .services-item {
   flex-basis: calc((100% - 48px) / 3);
 }
+.services-item:not(:last-child) {
+  margin-right: 24px;
+}
 
 .team-list {
   display: flex;
-  justify-content: space-between;
 }
 .team-item {
   flex-basis: calc((100% - 72px) / 4);
+}
+
+.team-item:not(:last-child) {
+  margin-right: 24px;
 }
 
 .team-img-content {
@@ -238,7 +240,17 @@ img {
 .light-logo {
   color: var(--light);
 }
+.section-portfolio-container {
+  padding-top: 96px;
+}
+.portfolio-list-btn {
+  display: flex;
+  justify-content: center;
+  column-gap: 24px;
+  margin-bottom: 72px;
+}
 .filter-btn {
+  display: inline-block;
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -249,12 +261,22 @@ img {
   background: var(--light);
   border: 1px solid #e7e9fc;
   cursor: pointer;
+  padding: 12px 24px;
+  min-width: 78px;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
 }
+
 .portfolio-list {
   display: flex;
+  column-gap: 24px;
+  flex-wrap: wrap;
 }
 .portfolio-item {
   flex-basis: calc((100% - 48px) / 3);
+}
+.portfolio-item:not(:last-child) {
+  margin-bottom: 48px;
 }
 .portfolio-title-item {
   font-style: normal;
@@ -268,4 +290,20 @@ img {
 .filter-btn:focus {
   color: var(--main-color);
   background-color: var(--pressed-state);
+}
+.portfolio-item-content {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+  border: 1px solid #e7e9fc;
+}
+.portfolio-title-item {
+  margin-bottom: 8px;
+}
+.page-footer-container {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.paragraph {
+  margin-top: 16px;
 }
