--- a/css/styles.css
+++ b/css/styles.css
@@ -319,6 +319,15 @@ img {
 }
 .logo-footer {
   display: inline-block;
+  font-family: 'Raleway', sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-brand);
+  margin-right: 76px;
   margin-bottom: 16px;
 }
 .paragraph-footer {
