--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,18 @@ ul {
 img {
   display: block;
 }
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
 
 .container {
   width: 1158px;
@@ -63,6 +75,9 @@ img {
   display: flex;
   align-items: center;
 }
+.logo-header {
+  margin-right: 76px;
+}
 .logo {
   font-family: 'Raleway', sans-serif;
   font-style: normal;
@@ -72,7 +87,6 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-brand);
-  margin-right: 76px;
 }
 .span-logo {
   color: var(--dark);
@@ -219,6 +233,8 @@ img {
 }
 .team-img-content {
   padding: 32px 16px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .text-centr {
   text-align: center;
