--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,14 @@ img {
   align-items: center;
 }
 .logo-header {
+  font-family: 'Raleway', sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-brand);
   margin-right: 76px;
 }
 .logo {
